# FYP-One-Shot-Random-Access

./: .gitignore  README.md  figure1_figure2_Analytical_vs_Appoximate_STANDALONE.py  figure1_figure2_Simulation_vs_Appoximate_STANDALONE.py  figure1_figure2_Simulation_vs_Appoximate_STANDALONE_OLD_SERIAL.py  main.py  pyproject.toml  requirements.txt
analysis/: formulas.py  single_access_analysis.py
core/: simulation.py  test_full_group_paging.py  test_single_ac.py
docs/: Sim7原論文.md
scripts/: generate_figure1_figure2_analytical.py  generate_figure1_figure2_simulation.py
