[project]
name = "fyp-yuanbao-modular"
version = "0.1.0"
description = "FYP Yuan Bao Modular Analysis Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "multiprocessing-logging>=0.3.4",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]
