[project]
name = "fyp-code"
version = "0.1.0"
description = "FYP Analysis Project"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "multiprocessing-logging>=0.3.4",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]
